--- a/app/templates/calculate.html
+++ b/app/templates/calculate.html
@@ -63,6 +63,9 @@
 
             <label for="groundwater_depth">Groundwater Depth (meters):</label>
             <input type="number" id="groundwater_depth" name="groundwater_depth" class="form-control">
+
+            <label for="borehole_distance">Distance to Borehole (meters):</label>
+            <input type="number" id="borehole_distance" name="borehole_distance" class="form-control">
         </div>
 
         <!-- Seasonal Factor -->
